# theme-music-creator

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: .env  .env.template  README_ENV.md  settings.json
.claude/agents/: context-coordinator-agent.md  design-review-agent.md  meta-agent.md  ui-designer.md  ui-testing-agent.md  work-completion-summary.md  worktree-coding-agent.md  worktree-expert-agent.md  worktree-review-agent.md
.claude/commands/: question.md  save.md
.claude/hooks/: README.md  notification.py  pre_compact.py  pre_tool_use.py  send_event.py  session_end.py  session_start.py  (+3 more)
app/: .env.example
backend/: .gitignore  pyproject.toml
backend/app/: .env.example  CLAUDE.md  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: aea0c5fba3a2_add_theme_music_models.py
backend/app/api/v1/: __init__.py  callback.py  render.py  router.py  structure.py  variations.py
backend/app/core/: CLAUDE.md
backend/app/database/models/: __init__.py  api_client.py  base_render.py  theme.py  theme_structure.py  variation.py
backend/app/schemas/: __init__.py  chord.py  enums.py  render.py  theme_structure.py  variation.py
backend/app/services/: __init__.py  ai_backend_service.py  authorization_service.py  base_render_service.py  chord_utils.py  midi_utils.py  render_utils.py  storage_service.py  theme_structure_service.py  variation_service.py
backend/docker/: .env.example  CLAUDE.md  docker-compose.launchpad.yml  docker-compose.yml
docker/: .env.example  docker-compose.launchpad.yml
frontend/: components.json  package-lock.json
(+97 files in other folders)
